--- a/truth/css/style.css
+++ b/truth/css/style.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 @font-face {
   font-family: BasisGrotesquePro;
   font-display: swap;
@@ -286,7 +284,7 @@ main {
   margin-top: auto;
 }
 
-.no-webp .welcome{
+.no-webp .welcome {
   background-image: url("../img/bg-welcome.png"); }
 
 .welcome {
@@ -758,73 +756,56 @@ main {
   line-height: 100%;
   text-transform: uppercase;
   margin-bottom: 15px;
-  background-color: var(--white);
   position: relative;
   z-index: 2;
 }
 
-.about__swiper {
-  overflow: visible !important;
-  height: 560px;
-  -webkit-transition: height 0.8s ease;
-  transition: height 0.8s ease;
-  position: relative;
-  z-index: 1;
+.about__slider {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.about__swiper .swiper-slide {
-  min-height: 400px;
+.about__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  gap: 10px;
 }
 
-.about__swiper .swiper-slide .about__name,
-.about__swiper .swiper-slide .about__descr {
-  opacity: 0;
-  -webkit-transition: all 0.8s;
-  transition: all 0.8s;
+.about__item {
+  display: block;
+  width: 129px;
+  height: 157px;
+  background-color: lightgray;
+  -webkit-transition: width 0.3s, height 0.3s;
+  transition: width 0.3s, height 0.3s;
+  cursor: pointer;
 }
 
-.about__swiper .swiper-slide .about__image {
-  -webkit-transition: all 0.8s;
-  transition: all 0.8s;
-  height: 167px;
-  pointer-events: none;
-}
-
-.about__swiper .swiper-slide-active .about__name,
-.about__swiper .swiper-slide-active .about__descr {
-  opacity: 1;
-}
-
-.about__swiper .swiper-slide-active .about__image {
-  height: 356px;
+.about__item.active {
+  width: 360px;
+  height: 530px;
 }
 
 .about__image {
-  margin-bottom: 12px;
-  display: block;
-  position: relative;
-  overflow: hidden;
   width: 100%;
+  height: 100%;
 }
 
 .about__image img {
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  position: absolute;
-  top: 0;
-}
-
-.about__name {
-  line-height: 36px;
-  letter-spacing: 0.36px;
-  text-transform: uppercase;
-  font-size: 18px;
-}
-
-.about__descr {
-  font-size: 15px;
-  letter-spacing: 0.3px;
 }
 
 .prev-logo {
@@ -2398,18 +2379,6 @@ main {
   }
 }
 
-@media (min-width: 480px) {
-  .about__swiper .swiper-slide-active .about__image {
-    height: 456px;
-  }
-}
-
-@media (min-width: 489px) {
-  .about__swiper {
-    height: 650px;
-  }
-}
-
 @media (min-width: 576px) {
   [class*=__container] {
     max-width: 540px;
@@ -2441,22 +2410,6 @@ main {
 
   .about__title {
     font-size: 65px;
-  }
-
-  .about__swiper {
-    height: 700px;
-  }
-
-  .about__swiper .swiper-slide .about__image {
-    height: 200px;
-  }
-
-  .about__swiper .swiper-slide-active .about__image {
-    height: 520px;
-  }
-
-  .about__name {
-    font-size: 24px;
   }
 
   .discoveries__title {
@@ -2618,22 +2571,6 @@ main {
 
   .about__title {
     font-size: 85px;
-  }
-
-  .about__swiper {
-    height: 900px;
-  }
-
-  .about__swiper .swiper-slide .about__image {
-    height: 350px;
-  }
-
-  .about__swiper .swiper-slide-active .about__image {
-    height: 750px;
-  }
-
-  .about__descr {
-    font-size: 16px;
   }
 
   .fields__title {
@@ -3053,141 +2990,6 @@ main {
     font-size: 85px;
     padding-bottom: 15px;
     margin-bottom: 0;
-  }
-
-  .about__swiper {
-    -webkit-transform: translateX(135px);
-        -ms-transform: translateX(135px);
-            transform: translateX(135px);
-    height: 450px;
-  }
-
-  .about__swiper .swiper-slide .about__image {
-    height: 157px;
-  }
-
-  .about__swiper .swiper-slide-active {
-    width: 300px !important;
-  }
-
-  .about__swiper .swiper-slide-active .about__image {
-    height: 450px;
-  }
-
-  .about__swiper .swiper-slide-active .about__info {
-    position: relative;
-    -webkit-transform: translate(336px, -288px);
-        -ms-transform: translate(336px, -288px);
-            transform: translate(336px, -288px);
-    width: 400px;
-  }
-
-  .about__image img {
-    height: 100%;
-  }
-
-  .about__name {
-    -webkit-transition: none;
-    transition: none;
-    font-size: 40px;
-    line-height: 74px;
-  }
-
-  .about__descr {
-    padding-left: 25px;
-    -webkit-transition: none;
-    transition: none;
-  }
-
-  .about__info {
-    z-index: -1;
-    opacity: 0;
-    position: relative;
-  }
-
-  .about__info:before {
-    position: absolute;
-    content: "“";
-    font-size: 56px;
-    letter-spacing: 1.12px;
-    text-transform: uppercase;
-    color: var(--dark);
-    z-index: 1;
-    top: 67px;
-    left: 0px;
-    height: 20px;
-    width: 20px;
-    opacity: 0;
-  }
-
-  .about__info:after {
-    position: absolute;
-    content: "”";
-    font-size: 56px;
-    letter-spacing: 1.12px;
-    text-transform: uppercase;
-    color: var(--dark);
-    z-index: 1;
-    top: 260px;
-    left: 164px;
-    height: 20px;
-    width: 20px;
-    opacity: 0;
-  }
-
-  .about .swiper-slide {
-    -webkit-transition: none;
-    transition: none;
-  }
-
-  .about .swiper-slide-active {
-    -webkit-transition: none;
-    transition: none;
-  }
-
-  .about .swiper-slide-active .about__info {
-    opacity: 1;
-    z-index: 1;
-  }
-
-  .about .swiper-slide-active .about__info:before,
-  .about .swiper-slide-active .about__info:after {
-    opacity: 1;
-  }
-
-  .about__info {
-    -webkit-transition: none !important;
-    transition: none !important;
-    -webkit-animation: none !important;
-            animation: none !important;
-    position: relative;
-    z-index: -1;
-  }
-
-  .about__info .about__name {
-    position: relative;
-    z-index: -1;
-  }
-
-  .about__info .about__descr {
-    z-index: -1;
-    position: relative;
-  }
-
-  .about .swiper-slide {
-    z-index: 1;
-    position: relative;
-    margin: 0 4px;
-  }
-
-  .about .swiper-slide::before {
-    position: absolute;
-    right: 0;
-    left: 0;
-    content: "";
-    width: 120%;
-    height: 157px;
-    background-color: var(--white);
   }
 
   .prev-logo {
@@ -3826,60 +3628,11 @@ main {
   }
 
   .about {
-    padding: 0px;
-    margin: 75px 0;
-    overflow: hidden;
+    padding: 75px 0;
   }
 
   .about__title {
     font-size: 100px;
-  }
-
-  .about__swiper {
-    height: 530px;
-    -webkit-transform: translateX(123px);
-        -ms-transform: translateX(123px);
-            transform: translateX(123px);
-  }
-
-  .about__swiper .swiper-slide-active {
-    width: 360px !important;
-  }
-
-  .about__swiper .swiper-slide-active .about__image {
-    height: 528px;
-  }
-
-  .about__swiper .swiper-slide-active .about__info {
-    -webkit-transform: translate(400px, -343px);
-        -ms-transform: translate(400px, -343px);
-            transform: translate(400px, -343px);
-    width: 510px;
-  }
-
-  .about__name {
-    font-size: 46px;
-    margin-bottom: 20px;
-  }
-
-  .about .about__swiper {
-    -webkit-transform: translateX(120px);
-        -ms-transform: translateX(120px);
-            transform: translateX(120px);
-  }
-
-  .about__info:before {
-    top: 48px;
-  }
-
-  .about .swiper-slide {
-    width: 129px !important;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-  }
-
-  .about .swiper-slide-active {
-    width: 360px !important;
   }
 
   .fields {
@@ -4205,44 +3958,6 @@ main {
     letter-spacing: 2.5px;
   }
 
-  .about__swiper {
-    /*    height: 530px;*/
-    -webkit-transform: translateX(155px);
-        -ms-transform: translateX(155px);
-            transform: translateX(155px);
-  }
-
-  .about__name {
-    font-size: 56px;
-    letter-spacing: 1.12px;
-  }
-
-  .about__swiper .swiper-slide-active .about__info {
-    -webkit-transform: translate(396px, -331px);
-        -ms-transform: translate(396px, -331px);
-            transform: translate(396px, -331px);
-  }
-
-  .about__swiper {
-    -webkit-transform: translateX(169px);
-        -ms-transform: translateX(169px);
-            transform: translateX(169px);
-  }
-
-  .about__swiper .swiper-slide {
-    width: 129px !important;
-  }
-
-  .about__swiper .swiper-slide-active {
-    width: 360px !important;
-  }
-
-  .about .about__swiper {
-    -webkit-transform: translateX(165px) !important;
-        -ms-transform: translateX(165px) !important;
-            transform: translateX(165px) !important;
-  }
-
   .prev-logo {
     padding: 70px 0 180px 0;
   }
@@ -4487,12 +4202,6 @@ main {
 }
 
 @media (min-width: 1600px) {
-  .about__swiper .swiper-slide-active .about__info {
-    -webkit-transform: translate(388px, -334px);
-        -ms-transform: translate(388px, -334px);
-            transform: translate(388px, -334px);
-  }
-
   .fields__container {
     grid-gap: 88px;
   }
@@ -4502,4 +4211,4 @@ main {
   }
 }
 
-.webp .welcome{ background-image: url(../img/bg-welcome.webp); }
+.webp .welcome { background-image: url(../img/bg-welcome.webp); }
