--- a/remont-stroy/css/style.css
+++ b/remont-stroy/css/style.css
@@ -139,6 +139,7 @@
 .payment__descr,
 .cooperation__descr,
 .company__descr,
+.step__text,
 .about__descr {
   color: var(--grey);
   font-weight: 500;
@@ -150,7 +151,8 @@
 .not-found .not-found__container .not-found__descr,
 .ex-works__descr,
 .calc__descr,
-.questions__descr {
+.questions__descr,
+.step__descr {
   text-align: center;
   padding: 0rem 1rem;
   color: var(--grey);
@@ -163,6 +165,7 @@
 .payment__theme,
 .cooperation__theme,
 .company__theme,
+.step__theme,
 .about__theme {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -181,6 +184,7 @@
 .payment__theme img,
 .cooperation__theme img,
 .company__theme img,
+.step__theme img,
 .about__theme img {
   width: 1.5625rem;
   height: 0.8125rem;
@@ -192,7 +196,6 @@
 .tenet__theme,
 .questions__theme,
 .our-advan__theme,
-.step__theme,
 .pay-met__theme,
 .completed__theme,
 .clients__theme,
@@ -218,7 +221,6 @@
 .tenet__theme img,
 .questions__theme img,
 .our-advan__theme img,
-.step__theme img,
 .pay-met__theme img,
 .completed__theme img,
 .clients__theme img,
@@ -1810,7 +1812,7 @@ main {
   line-height: 1.75rem;
   margin-bottom: 2.2rem;
   text-align: center;
-  padding: 0rem 1rem;
+  padding: 0rem 5.5rem;
 }
 
 .types-repairs__tabs {
@@ -2636,6 +2638,55 @@ main {
   line-height: clamp(1rem, 2vw, 1.25rem);
 }
 
+.step__wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+  gap: 100px;
+  margin-bottom: 3rem;
+}
+
+.step__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.step__list li {
+  line-height: 1.5rem;
+  color: #15161c;
+  padding-left: 1.6rem;
+  position: relative;
+}
+
+.step__list li::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0.4rem;
+  width: 1.2rem;
+  height: 0.78rem;
+  background: url("../img/icon-type.svg") no-repeat center/contain;
+}
+
+.step__image {
+  border-radius: 1rem;
+  overflow: hidden;
+  height: 568px;
+}
+
+.step__image img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .step__items {
   display: -ms-grid;
   display: grid;
@@ -2758,6 +2809,7 @@ main {
   -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1.87rem 1.56rem;
+  margin-bottom: 1.88rem;
 }
 
 .our-advan__item {
@@ -2794,6 +2846,24 @@ main {
   color: #737373;
   font-size: clamp(0.88rem, 2vw, 1rem);
   line-height: clamp(1rem, 2vw, 1.25rem);
+}
+
+.our-advan__name {
+  text-align: center;
+  font-weight: 600;
+  font-size: clamp(1.5rem, 4vw, 2.6rem);
+  line-height: clamp(1.75rem, 4vw, 3.25em);
+  margin-bottom: clamp(0.5rem, 2vw, 0.75rem);
+  padding: 0rem 1rem;
+}
+
+.our-advan__text {
+  text-align: center;
+  padding: 0rem 1rem;
+  color: var(--grey);
+  font-weight: 500;
+  font-size: clamp(0.8rem, 2vw, 1rem);
+  line-height: clamp(1.2rem, 2.5vw, 1.75rem);
 }
 
 .questions__items {
@@ -6142,6 +6212,14 @@ main {
             transform: translateX(0.4rem);
   }
 
+  .step__wrapper {
+    gap: 50px;
+  }
+
+  .step__image {
+    height: 500px;
+  }
+
   .feedback__info {
     padding: 3.06rem;
     -webkit-box-flex: 0;
@@ -6353,6 +6431,7 @@ main {
   .types-repairs__descr {
     margin-bottom: 1.5rem;
     line-height: 1.4rem;
+    padding: 0rem 3.5rem;
   }
 
   .types-repairs__price {
@@ -6362,6 +6441,14 @@ main {
 
   .types-repairs__term {
     line-height: 1.4rem;
+  }
+
+  .step__wrapper {
+    gap: 30px;
+  }
+
+  .step__image {
+    height: 530px;
   }
 
   .step__items {
@@ -6684,6 +6771,17 @@ main {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
             flex: 0 0 auto;
+  }
+
+  .step__wrapper {
+    -ms-grid-columns: (1fr)[1];
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 1.5rem;
+    gap: 1rem;
+  }
+
+  .step__image {
+    height: 600px;
   }
 
   .step__items {
@@ -7835,6 +7933,16 @@ main {
             transform: scale(1.035);
   }
 
+  .step__list {
+    font-size: 0.88rem;
+    line-height: 1rem;
+  }
+
+  .step__image {
+    border-radius: 0.4rem;
+    height: 100%;
+  }
+
   .our-advan__items {
     -ms-grid-columns: (1fr)[1];
     grid-template-columns: repeat(1, 1fr);
@@ -8363,6 +8471,7 @@ main {
   .types-repairs__descr {
     font-size: 0.88rem;
     line-height: 1.2rem;
+    padding: 0rem 1rem;
   }
 
   .types-repairs__tabs {
@@ -8953,6 +9062,18 @@ main {
   }
 
   .types-repairs__list li {
+    font-size: 0.7rem;
+    line-height: 1rem;
+    padding-left: 1.4rem;
+  }
+
+  .step__list li::before {
+    top: 0.2rem;
+    width: 1rem;
+    height: 0.6rem;
+  }
+
+  .step__list li {
     font-size: 0.7rem;
     line-height: 1rem;
     padding-left: 1.4rem;
